--- a/2.5/cccp.yml
+++ b/2.5/cccp.yml
@@ -1,3 +1,3 @@
 # This is for the purpose of building this container
 # on the centos container pipeline.
-job-id: ruby-23-centos7
+job-id: ruby-vocab-25-centos7
